--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,72 @@
 body {
-    background-color: #C7FFC7;
+    margin: 10px;
 }
 
 nav {
     border: 2px solid black;
-    text-align: center;
+    font-family: 'Montserrat', sans-serif;
 }
 
 li {
     display: inline-block;
     padding: 20px;
-    width: 300px;
-}
-
-nav a {
-    background-color: yellow;
-    padding: 5px;
-    margin: 20px;
+    text-align: center;
 }
 
 a {
-    text-align: underline;
-    border: solid blue;
+    text-decoration: underline;
+    color: blueviolet;
 }
 
+a:hover {
+    color: red;
+}
 
+h1 {
+    font-size: 45px;
+    text-align: center;
+    text-decoration: underline;
+    font-family: 'Barlow Condensed', sans-serif;
+    text-transform: uppercase;
+    padding: 15px;
+}
 
 h2 {
     font-size: 40px;
-    text-align: center;
-    font-family: cursive;
+    font-family: 'Barlow Condensed', sans-serif;
 }
 h3 {
-    font-size: 20px;
+    font-size: 25px;
     color: blue;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
 
 }
 p {
     line-height: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
 }
 
-div {
-    width: 100%
+figure {
+    font-family: 'Montserrat', sans-serif;
+}
+
+@media screen and (min-width: 300px) {
+    nav ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin: auto;
+    }
+
+    figcaption {
+        text-align: center;
+        font-size: 10px;
+    }
+
+    figure img {
+        display: block;
+        margin: auto;
+    }
+
 }
